<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.team_project_team6.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_walk"
            app:destination="@id/navigation_walk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_walk"
        android:name="com.example.team_project_team6.ui.walk.WalkFragment"
        android:label="@string/title_walk"
        tools:layout="@layout/fragment_walk" >
        <action
            android:id="@+id/action_navigation_walk_to_mockWalkFragment"
            app:destination="@id/mockWalkFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_walk_to_newRouteFragment"
            app:destination="@id/newRouteFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_walk_to_navigation_routes"
            app:destination="@id/navigation_routes"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/newRouteFragment"
        android:name="com.example.team_project_team6.ui.new_route.NewRouteFragment"
        android:label="New Route"
        tools:layout="@layout/new_route_fragment" >
        <action
            android:id="@+id/action_newRouteFragment_to_navigation_routes"
            app:destination="@id/navigation_routes"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.team_project_team6.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_routeDetailsFragment"
            app:destination="@id/routeDetailsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_navigation_routes_to_newRouteFragment"
            app:destination="@id/newRouteFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/mockWalkFragment"
        android:name="com.example.team_project_team6.ui.walk.MockWalkFragment"
        android:label="Mock Walk"
        tools:layout="@layout/fragment_mock_walk" >
        <action
            android:id="@+id/action_mockWalkFragment_to_navigation_walk"
            app:destination="@id/navigation_walk"
            tools:layout="@layout/fragment_routes" />
        <action
            android:id="@+id/action_mockWalkFragment_to_newRouteFragment"
            app:destination="@id/newRouteFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_mockWalkFragment_to_navigation_routes"
            app:destination="@id/navigation_routes"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/routeDetailsFragment"
        android:name="com.example.team_project_team6.ui.route_details.RouteDetailsFragment"
        android:label="fragment_route_details"
        tools:layout="@layout/fragment_route_details" >
        <action
            android:id="@+id/action_routeDetailsFragment_to_navigation_walk"
            app:destination="@id/navigation_walk"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />

        <action
            android:id="@+id/action_routeDetailsFragment_to_mockWalkFragment"
            app:destination="@id/mockWalkFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />

        <action
            android:id="@+id/action_routeDetailFragment_to_SetProposeDate"
            app:destination="@id/setProposedDate"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_team"
        android:name="com.example.team_project_team6.ui.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_team" >
        <action
            android:id="@+id/action_teamFragment_to_SendTeamRequestFragment"
            app:destination="@id/sendTeamRequestFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/memberFragment"
        android:name="com.example.team_project_team6.ui.team.MemberFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_members"/>

    <fragment
        android:id="@+id/proposedWalkFragment"
        android:name="com.example.team_project_team6.ui.team.ProposedWalkFragment"
        android:label="@string/title_proposed_walk"
        tools:layout="@layout/fragment_proposed_walk" />

    <fragment
        android:id="@+id/sendTeamRequestFragment"
        android:name="com.example.team_project_team6.ui.team.SendTeamRequestFragment"
        android:label="Invite"
        tools:layout="@layout/fragment_send_team_request" >
        <action
            android:id="@+id/R.id.SendTeamRequestFragment_to_action_teamFragment"
            app:destination="@id/navigation_team"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/setProposedDate"
        android:name="com.example.team_project_team6.ui.team.SetProposedDateFragment"
        android:label="Set Proposed Walk Date"
        tools:layout="@layout/fragment_set_proposed_date" >
        <action
            android:id="@+id/navigate_SetDateFragment_to_teamFragment"
            app:destination="@id/navigation_team"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="false" />
    </fragment>

</navigation>
