<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/txt_set_propose_date" />

    <EditText
        android:id="@+id/date_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/set_propose_date" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="200dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/txt_set_propose_time" />

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/set_propose_time" />

    <Button
        android:id="@+id/bt_done_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/bt_set_date"
        android:layout_centerHorizontal="true" />


</RelativeLayout>